Commit the fixed style of text wrap, and shutdown the setInterval of func randomize for '/index.html' and '/slideshows/index.html'

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,7 +58,7 @@ body {
 
 
 .et-nav-v ul li a {
-  /*white-space: nowrap;*/
+  white-space: nowrap;
   padding: 1.5rem 2rem;
   display: block;
   cursor: alias;
